# phylum-cli

./: Cargo.toml  extension.js  phylum.wit  plugin.wit
.github/workflows/: release.yml  test.yml
cli/: Cargo.toml
cli/src/: app.rs  render.rs
cli/src/api/: endpoints.rs  groups.rs  mod.rs
cli/src/auth/: oidc.rs
cli/src/commands/: deno.rs  group.rs  jobs.rs  mod.rs  parse.rs  project.rs  wasm.rs
cli/src/commands/extensions/: extension.rs  mod.rs
cli/src/commands/extensions/bindings/: mod.rs
cli/src/commands/extensions/bindings/python/: mod.rs
cli/src/lockfiles/: javascript.rs
cli/src/lockfiles/parsers/: mod.rs  yarn.rs
cli/tests/: extensions.rs
lib/remediation-cmd/: Cargo.toml
lib/remediation-cmd/src/: lib.rs
lib/remediation-cmd/tests/: integration.rs
lib/remediation-cmd/tests/fixtures/yarn01/: candidates.json  package.json  packages_with_issues.json
lib/remediation-cmd/tests/fixtures/yarn02/: package.json
lib/test-util/: Cargo.toml
lib/test-util/src/: lib.rs
projects_plugin/: Cargo.toml  bindings.rs
projects_plugin/src/: lib.rs
ts_module/: main.ts  test.ts
wasminimal/: Cargo.toml
wasminimal/src/: lib.rs
xtask/: Cargo.toml
