[package]
name = "remediation-cmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
reqwest = "0.11.9"
phylum-cli = { path = "../../cli" }
test-util = { path = "../test-util" }
serde = { version = "1.0.136", features = ["derive"] }
node-semver = "2.0.0"
serde_json = "1.0.79"
anyhow = "1.0.55"

[dev-dependencies]
tokio = "1.17.0"
tokio-test = "0.4.2"
simplelog = "0.11.2"
log = "0.4.14"
