[package]
name = "test-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
reqwest = "0.11.9"
wiremock = "0.5.11"
phylum_types = { git = "https://github.com/phylum-dev/phylum-types", branch = "master" }
phylum-cli = { path = "../../cli" }
tokio = "1.17.0"
env_logger = "0.9.0"
log = "0.4.14"
